crates/mp-tui/src/ui/snapshots/mp_tui__ui__golden_frames__golden_calendar_view_cancelled_event_detail.snap
---
source: crates/mp-tui/src/ui/golden_frames.rs
expression: "frame_snapshot(&mut app, WIDTH, HEIGHT)"
---
== text 120x40 (trailing spaces trimmed) ==
00 |╭ Calendar (3 upcoming) ─────────────────╮╭ Event ─────────────────────────────────────────────────────────────────────╮
01 |│2026-08-03 09:00 Baustel…   accepted    ││Abgesagter Jour fixe                                                        │
02 |│2026-08-04 10:00 Abgesag…   cancelled   ││Cancelled by the organizer.                                                 │
03 |│2026-08-06 15:00 PhD Kol…   organizer   ││When: 2026-08-04T08:00:00+02:00                                             │
04 |│                                        ││Where: Raum 2.14                                                            │
05 |│                                        ││Organizer: planung@example.org                                              │
06 |│                                        ││Your RSVP: Accepted                                                         │
07 |│                                        ││Cancelled invitations take no response; nothing was sent to Exchange (no    │
08 |│                                        ││Graph in v1).                                                               │
09 |│                                        ││                                                                            │
10 |│                                        ││                                                                            │
11 |│                                        ││                                                                            │
12 |│                                        ││                                                                            │
13 |│                                        ││                                                                            │
14 |│                                        ││                                                                            │
15 |│                                        ││                                                                            │
16 |│                                        ││                                                                            │
17 |│                                        ││                                                                            │
18 |│                                        ││                                                                            │
19 |│                                        ││                                                                            │
20 |│                                        ││                                                                            │
21 |│                                        ││                                                                            │
22 |│                                        ││                                                                            │
23 |│                                        ││                                                                            │
24 |│                                        ││                                                                            │
25 |│                                        ││                                                                            │
26 |│                                        ││                                                                            │
27 |│                                        ││                                                                            │
28 |│                                        ││                                                                            │
29 |│                                        ││                                                                            │
30 |│Only events that arrived by email are   ││                                                                            │
31 |│shown; Outlook-created events need Graph││                                                                            │
32 |│sync (#0036).                           ││                                                                            │
33 |╰────────────────────────────────────────╯│                                                                            │
34 |╭ View ──────────────────────────────────╮│                                                                            │
35 |│     mail  |  contacts  |  calendar     ││                                                                            │
36 |╰────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────╯
37 |╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
38 |│ CALENDAR   j/k Navigate events  Enter / e Open invite email  V RSVP  t Past / upcoming  r Refresh                    │
39 |╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
== style runs (col ranges are half-open; rows with no meaning-carrying style are omitted) ==
01 |fg:selection@29..37 bold@43..63
02 |bg:surface+fg:selection+bold+strike@1..17 bg:surface+fg:selection+bold@17..18 bg:surface+fg:selection+bold+strike@18..26 bg:surface+fg:selection+bold@26..41 fg:error+bold@43..70
03 |bold@43..49
04 |bold@43..50
05 |bold@43..54
06 |bold@43..54 fg:selection@54..62
35 |bold@27..37
38 |bold@1..11 bold@13..16 bold@34..43 bold@63..64 bold@71..72 bold@90..91
